<resources>

    <string name="app_name">PetrifacationNo2</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="publish">发布</string>
    <string name="me">我</string>
    <string name="search">搜索</string>
    <string name="supply">供应</string>
    <string name="demand">求购</string>
    <string name="loading">正在努力加载中...</string>
    <string name="loadingtext">数据加载中...</string>
    <string name="collect">收藏</string>
    <string name="attention">关注</string>
    <string name="share">分享</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="failed">亲，网络不给力啊...</string>
    <string name="call">拨打电话</string>
    <string name="sendMessage">私信</string>
    <string name="placeOrder">下单</string>
    <string name="order">订单</string>

</resources>