<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alpha="0.8"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey" />

        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/home_selector"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/tag_textcolor"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/message_selector"
                android:gravity="center_horizontal"
                android:text="@string/message"
                android:textColor="@color/tag_textcolor"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/publish_selector"
                android:gravity="center_horizontal"
                android:text="@string/publish"
                android:textColor="@color/tag_textcolor"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/search_selector"
                android:gravity="center_horizontal"
                android:text="@string/search"
                android:textColor="@color/tag_textcolor"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/me_selector"
                android:gravity="center_horizontal"
                android:text="@string/me"
                android:textColor="@color/tag_textcolor"
                android:textSize="12sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>