<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:background="@drawable/background" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:alpha="0.3"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:background="#00000000"
                    android:src="@drawable/back_simple" />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    android:text="企业名称"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/companyName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="15dp"
                    android:padding="5dp"
                    android:text="联系人"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/sendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_shape"
                android:drawableLeft="@drawable/message_mini"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/sendMessage" />

            <TextView
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/sendMessage"
                android:background="@drawable/btn_shape"
                android:drawableLeft="@drawable/call_mini"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/call" />

            <TextView
                android:id="@+id/concern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/sendMessage"
                android:background="@drawable/btn_shape_red"
                android:drawableLeft="@drawable/attention_white"
                android:drawablePadding="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:text="@string/attention" />
        </RelativeLayout>

        <include layout="@layout/line_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/light_grey"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="供求记录 >" />

        <include layout="@layout/line_dark" />

        <net.lz.petrifaction.view.XListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </net.lz.petrifaction.view.XListView>
    </LinearLayout>

</merge>